<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">FlorisBoard</string>

    <string name="key__phone_pause" comment="Label for the Pause key in the telephone keyboard layout">Pause</string>
...
    <string name="settings__theme_editor__add_rule">Add rule</string>
    <string name="settings__theme_editor__edit_rule">Edit rule</string>
    <string name="settings__theme_editor__no_rules_defined">This stylesheet has no rules defined. Add a rule to start customizing this stylesheet.</string>
    <string name="settings__theme_editor__rule_already_exists">This stylesheet rule is already defined.</string>
    <string name="settings__theme_editor__rule_name">Element / Annotation</string>
...
    <string name="snygg__rule_annotation__font_name">Font name</string>

    <string name="snygg__rule_element__root">Root</string>
    <string name="snygg__rule_element__window">Window</string>
    <string name="snygg__rule_element__window_inner">Window Inner</string>

...
    <string name="snygg__property_name__border_color">Border color</string>
    <string name="snygg__property_name__border_style">Border style</string>
    <string name="snygg__property_name__border_width">Border width</string>
    <string name="snygg__property_name__font_family">Font family</string>
    <string name="snygg__property_name__font_size">Font size</string>
...
    <string name="snygg__property_name__line_height">Line height</string>
    <string name="snygg__property_name__margin">Margin</string>
    <string name="snygg__property_name__padding">Padding</string>
    <string name="snygg__property_name__shadow_color">Shadow color</string>
    <string name="snygg__property_name__shadow_elevation">Shadow elevation</string>
...
    <string name="snygg__property_value__font_style">Font style</string>
    <string name="snygg__property_value__font_weight">Font weight</string>
    <string name="snygg__property_value__padding">Padding or Margin</string>
    <string name="snygg__property_value__rectangle_shape">Rectangle shape</string>
    <string name="snygg__property_value__circle_shape">Circle shape</string>
...
    <string name="ext__editor__files__title">Manage archive files</string>
    <string name="ext__editor__files__type_fonts">Fonts</string>
    <string name="ext__editor__files__type_images">Images</string>
    <string name="ext__editor__create_component__title_theme">Create theme</string>
    <string name="ext__editor__create_component__from_empty">Empty</string>
...

    <!-- Action strings -->
    <string name="action__add">Add</string>
    <string name="action__apply">Apply</string>
    <string name="action__back">Back</string>
    <string name="action__back_up">Back up</string>
    <string name="action__cancel">Cancel</string>
    <string name="action__create">Create</string>
    <string name="action__close">Close</string>
...
    <string name="action__export">Export</string>
    <string name="action__import">Import</string>
    <string name="action__import_file">Import file</string>
    <string name="action__no">No</string>
    <string name="action__ok">OK</string>
...
